# bicycle-path-finder

./: README.md
api/: .gitignore  pyproject.toml
api/api/data/: nodes.csv
api/data/: nodes.csv
api/scripts/: fetch_graph_data.py
api/src/: data_model.py  main.py  utils.py
api/tests/: test_utils.py
ui/: package-lock.json  package.json
ui/src/: App.vue
ui/src/components/: MapView.vue
ui/src/services/: backend.ts
